--- a/register/templates/register/registerFelhasznalo.html
+++ b/register/templates/register/registerFelhasznalo.html
@@ -4,10 +4,14 @@
 
 {% block content %}
 
-    <form method="POST", class="form-group">
-    {% csrf_token %}
-    {{ form }}
-    <button type="submit" class="btn btn-success">Regisztráció</button>
-    </form>
+    <div class="login-section card-footer">
+        <form method="POST", class="form-group">
+            {% csrf_token %}
+            {{ form }}
+            <div class="row jutify-content-center">
+                <button type="submit", class="btn btn-primary login-button">Regisztráció</button>
+            </div>
+        </form>
+    </div>
 
 {% endblock content %}
