--- a/register/templates/base.html
+++ b/register/templates/base.html
@@ -2,35 +2,95 @@
 {% load static %}
 
 <html lang="en">
-
     <head>
         <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Better Neptun</title>
-        <link rel="stylesheet" href="{% static  'etr/css/bootstrap.css' %}">
-        <link rel="stylesheet" href="{% static  'etr/css/style.css' %}">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
         <link rel="shortcut icon" type="image/x-icon" href="{% static 'etr/images/favicon.png' %}">
-
+        <link rel="stylesheet" type="text/css" href="{% static 'etr/css/style.css' %}">
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600&display=swap" rel="stylesheet">
     </head>
-
     <body>
-        <div class="logo"></div>
-        <div class="card login-card d-flex justify-content-center">
+        <header>
+            <div class="p-5 text-center bg-light" id="logo-container">
+            <nav class="navbar navbar-expand-lg navbar-lg" id="navbar">
+                <div class="collapse navbar-collapse" id="navbarNav">
+                 <ul class="navbar-nav">
+                  <li class="nav-item active">
+                       <a class="nav-link" href="/">Bejelentkezés</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="/register">Regisztráció</a>
+                  </li>
+                 </ul>
+                </div>
+            </nav>
+            <a href="/"><img src="{% static 'etr/images/neptun_logo.png' %}" id="logo" alt="Logo"></a>
+          </div>
+        </header>
+        <div class="card form-group custom-form" stlye="padding-top:15px">
             <div class="card-body">
-                {% if user.is_authenticated %}
-                    ur logged in
-                <a href="{{ HTTP_HOST }}/me/">{{ user }} - Settings</a><br>
-                <a href="{{ HTTP_HOST }}/felhasznalok/">Felhasználó Lista - Csak EtrAdminoknak amúgy redirectel</a><br>
-
-                <a href="/logout/?next=/login/" class="temp-link">Logout here</a>
-                {% else %}
-                <a href="/login/?next=/admin/" class="temp-link">Login here</a>
-
-                {% endif %}
-
                 {%  block content %}
-                            replace me
-                        {% endblock %}
+                    replace me
+                {% endblock %}
             </div>
         </div>
+     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
     </body>
+    <footer class="bg-light text-center text-lg-start">
+      <div class="container p-4" id="news">
+        <div class="row">
+          <div class="col-lg-6 col-md-12 mb-4 mb-md-0">
+            <h5 class="text-uppercase">Friss hírek</h5>
+            <p>
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iste atque ea quis
+              molestias. Fugiat pariatur maxime quis culpa corporis vitae repudiandae aliquam
+              voluptatem veniam, est atque cumque eum delectus sint!
+            </p>
+          </div>
+          <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
+            <h5 class="text-uppercase">Hasznos linkek</h5>
+
+            <ul class="list-unstyled mb-0">
+              <li>
+                <a href="#!" class="text-dark">Modulo</a>
+              </li>
+              <li>
+                <a href="#!" class="text-dark">CooSpace</a>
+              </li>
+              <li>
+                <a href="#!" class="text-dark">Felvételi határozat letöltése</a>
+              </li>
+              <li>
+                <a href="#!" class="text-dark">Segédprogramok</a>
+              </li>
+            </ul>
+          </div>
+          <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
+            <h5 class="text-uppercase mb-0">Letölthető dokumentumok</h5>
+
+            <ul class="list-unstyled">
+              <li>
+                <a href="#!" class="text-dark">Átsorolás rendje</a>
+              </li>
+              <li>
+                <a href="#!" class="text-dark">Szakmai gyakorlat</a>
+              </li>
+              <li>
+                <a href="#!" class="text-dark">Tárgyfelvétel</a>
+              </li>
+              <li>
+                <a href="#!" class="text-dark">Digitális oktatási rend 2021. március 8-tól</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <div class="text-center p-3" id="copyright" style="background-color: rgba(12, 116, 242, 0.8);">
+        © 2020 Copyright:
+        <a class="text-dark" href="/">SZTE</a>
+      </div>
+    </footer>
 </html>
