--- a/static/etr/css/style.css
+++ b/static/etr/css/style.css
@@ -1,32 +1,90 @@
 html{
     width: 100%;
     height: 100%;
-    font-family: Verdana;
-    font-size: 11px;
+    font-family: Verdana !important;
 }
 
-.login-button{
-    margin-top: 5px;
+header{
+    background-color: #469BD3 !important;
 }
 
-.login-card{
-    position: relative;
-    left: 175px;
-    width: 70%;
-    top: -50px;
+body{
+    font-family: 'Nunito', sans-serif !important;
 }
+
+footer{
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+}
+
+.title{
+    text-align: center;
+}
+
+.card{
+    font-weight: 700;
+}
+
 
 .temp-link{
     text-decoration: none;
-    color:lightcoral;
 }
 
-.logo{
-    height: 300px;
-    background-image: url('./images/neptun_logo.png');
+.custom-form{
+    position: absolute;
+    width: 50%;
+    left: 25%;
+    margin: 25px;
+    top: 10%;
+}
+
+.navbar-nav{
+    padding-left: 15px;
+}
+
+.navbar-nav li a{
+    color: white !important;
+}
+
+#id_username{
+    border: 0;
+    box-sizing: border-box;
     width: 100%;
-    background-repeat: no-repeat;
+}
+
+#copyright{
+    padding: 0.25rem !important;
+}
+
+#news{
+    font-size: 12px;
+    padding: 0.25rem !important;
+}
+
+#navbar{
+    font-size: 20px !important;
+    padding: 0;
+    top: -40px;
+}
+
+#logo{
     position: relative;
-    transform: scale(25%);
-    left: 2%;
+    transform: scale(0.25);
+    top: -150px;
+}
+
+#logo-container{
+    height: 50px !important;
+    background-color: #469BD3 !important;
+    font-weight: 500 !important;
+    padding-bottom: 15px !important;
+}
+
+#login-card button{
+    position: relative;
+    width: 50% !important;
+    margin-top: 15px !important;
+    left: 25% !important;
 }
