--- a/terem/templates/terem_list.html
+++ b/terem/templates/terem_list.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'base_logged_in.html' %}
 
 {% block content %}
     <a href="../../termek/create"><h3>Új terem felvétele</h3></a>
