--- a/user/templates/user/logout.html
+++ b/user/templates/user/logout.html
@@ -1,10 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends 'base.html' %}
 
-</body>
-</html>
+{% block content %}
+    <h2>Sikeres kijelentkezés</h2>
+{% endblock %}
