--- a/register/templates/register/registerFelhasznalo.html
+++ b/register/templates/register/registerFelhasznalo.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "base_register.html" %}
 
 <h1>REGISZTRÁLÁS!4!</h1>
 
@@ -9,36 +9,7 @@
             <h1 class="title">Regisztráció</h1>
             {% csrf_token %}
             <div class="row jutify-content-center" id="login-card">
-                <form>
-                    <div class="form-group">
-                        <label for="vezeteknev">Vezetéknév: </label>
-                        <input id="vezeteknev" type="text" class="form-control" name="vezeteknev" maxlength="15" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="keresztnev">Keresztnév: </label>
-                        <input id="keresztnev" type="text" class="form-control" name="keresztnev" maxlength="15" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="email">E-mail cím: </label>
-                        <input id="email" type="email" class="form-control" name="email" maxlength="30" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="telefonszam">Telefonszám: </label>
-                        <input id="telefonszam" type="phone" class="form-control" name="telefonszam" maxlength="15" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="jelszo">Jelszó: </label>
-                        <input id="jelszo" type="password" class="form-control" name="jelszo" maxlength="15" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="jelszo2">Jelszó megerősítése: </label>
-                        <input id="jelszo2" type="password" class="form-control" name="jelszo2" maxlength="15" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="szulido">Születési dátum: </label>
-                        <input id="szulido" type="date" class="form-control" name="szulido">
-                    </div>
-                </form>
+                {{ form }}
                 <button type="submit", class="btn btn-primary login-button">Regisztráció</button>
                 {% if user.is_authenticated %}
                     ur logged in
@@ -51,5 +22,4 @@
             </div>
         </form>
     </div>
-
 {% endblock content %}
