--- a/vizsga/templates/vizsga_list.html
+++ b/vizsga/templates/vizsga_list.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'base_logged_in.html' %}
 
 {% block content %}
     <a href="../../vizsgak/create"><h3>Új vizsga felvétele</h3></a>
