--- a/register/templates/base.html
+++ b/register/templates/base.html
@@ -22,6 +22,9 @@
                   <li class="nav-item active">
                        <a class="nav-link" href="/">Bejelentkezés</a>
                   </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="/register">Regisztráció</a>
+                  </li>
                  </ul>
                 </div>
             </nav>
@@ -35,9 +38,9 @@
                 {% endblock %}
             </div>
         </div>
-      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
-      <script src="{% static 'js/jquery-3.2.1.min.js' %}"></script>
-      <script src="https://unpkg.com/@popperjs/core@2"></script>
+        <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"></script>
+      <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
+      <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
     </body>
     <footer class="bg-light text-center text-lg-start">
       <div class="container p-4" id="news">
