--- a/register/templates/base_logged_in.html
+++ b/register/templates/base_logged_in.html
@@ -1,5 +1,6 @@
 <!doctype html>
 {% load static %}
+{% load bootstrap4 %}
 
 <html lang="en">
     <head>
@@ -15,14 +16,25 @@
     <body>
         <header>
           <div class="p-5 text-center bg-light" id="logo-container">
+            {%  if  role  == "admin" %}
+            <nav class="navbar navbar-expand-lg navbar-lg" id="navbar">
+                <div class="collapse navbar-collapse" id="navbarNav">
+                 <ul class="navbar-nav">
+                  <li class="nav-item active">
+                       <a class="nav-link" href="/register">Regisztráció</a>
+                  </li>
+                 </ul>
+                </div>
+            </nav>
+            {% endif %}
             <div class="dropdown-show" id="first-column">
-              <a class="btn btn-primary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              <button class="btn btn-primary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Menü
-              </a>
-              <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                <a class="dropdown-item" href="#">Termek</a>
-                <a class="dropdown-item" href="#">Kurzusok</a>
-                <a class="dropdown-item" href="#">Tantárgyak</a>
+              </button>
+              <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuLink">
+                <a class="dropdown-item" href="{{ HTTP_HOST }}/kurzusok/">Kurzusok</a>
+                <a class="dropdown-item" href="{{ HTTP_HOST }}/vizsgak/">Vizsgák</a>
+                <a class="dropdown-item" href="{{ HTTP_HOST }}/termek/">Termek</a>
               </div>
             </div>
             <a href="/"><img src="{% static 'etr/images/neptun_logo.png' %}" id="logo_logged_in" alt="Logo"></a>
@@ -40,7 +52,9 @@
                 {% endblock %}
             </div>
         </div>
-     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
+        <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"></script>
+      <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
+      <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
     </body>
     <footer class="bg-light text-center text-lg-start">
       <div class="text-center p-3" id="copyright" style="background-color: rgba(12, 116, 242, 0.8);">
