--- a/register/templates/base_register.html
+++ b/register/templates/base_register.html
@@ -1,5 +1,6 @@
 <!doctype html>
 {% load static %}
+{% load bootstrap4 %}
 
 <html lang="en">
     <head>
@@ -37,7 +38,9 @@
                 {% endblock %}
             </div>
         </div>
-     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
+      <script src="{% static 'js/jquery-3.2.1.min.js' %}"></script>
+      <script src="https://unpkg.com/@popperjs/core@2"></script>
     </body>
     <footer class="bg-light text-center text-lg-start">
       <div class="text-center p-3" id="copyright" style="background-color: rgba(12, 116, 242, 0.8);">
