--- a/user/templates/felhasznalok/felhasznalok_list.html
+++ b/user/templates/felhasznalok/felhasznalok_list.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'base_logged_in.html' %}
 
 {% block content %}
     <a href="../register/"><h3>Új Felhasználó Felvétele</h3></a>
