--- a/user/templates/felhasznalok/sajat_detail.html
+++ b/user/templates/felhasznalok/sajat_detail.html
@@ -9,63 +9,38 @@
         <tbody>
             <tr>
                 <th>Azonosító:</th>
-                <td> {{ obj.azonosito }} random adat sry</td>
+                <td> {{ obj.azonosito }}</td>
             </tr>
             <tr>
                 <th>Vezetéknév:</th>
-                <td>{{ obj.vezeteknev }} random adat sry</td>
+                <td>{{ obj.vezeteknev }}</td>
             </tr>
             <tr>
                 <th>Keresztnév:</th>
-                <td>{{ obj.keresztnevev }} random adat sry</td>
+                <td>{{ obj.keresztnev }}</td>
             </tr>
             <tr>
                 <th>Személyi szám:</th>
-                <td>{{ obj.szemelyiszam }} random adat sry</td>
+                <td>{{ obj.szemelyiszam }}</td>
             </tr>
             <tr>
                 <th>Születési idő:</th>
-                <td>{{ obj.szulido }} random adat sry</td>
+                <td>{{ obj.szulido }}</td>
             </tr>
             <tr>
                 <th>Telefonszám:</th>
-                <td>{{ obj.telefonszam }} random adat sry</td>
+                <td>{{ obj.telefonszam }}</td>
             </tr>
             <tr>
                 <th>Email:</th>
-                <td>{{ obj.email }} random adat sry</td>
-            </tr>
-            <tr>
-                <th>Jelszó:</th>
-                <td>{{ obj.jelszo }} random adat sry</td>
+                <td>{{ obj.email }}</td>
             </tr>
         </tbody>
     </table>
-    {% if  role  == "admin" %}
-        ADMIIIIIN<br>
-    {% endif %}
     <div class="buttons">
         <button type="button" class="btn btn-primary"><a href="../felhasznalok/{{ obj.azonosito }}/update/">Szerkesztés</a></button>
-        <button type="button" class="btn btn-primary"><a href="../felhasznalok/{{ obj.azonosito }}/delete/">Törlés - CSAK ADMINOKNAK, MAJD VKI A FRONTENDEN ELTÜNTETI LOL</a></button>
+        {% if  role  == "admin" %}
+        <button type="button" class="btn btn-primary"><a href="../felhasznalok/{{ obj.azonosito }}/delete/">Törlés</a></button>
+        {% endif %}
     </div>
 {% endblock %}
-
-<!--            <th>Azonosító</th>
-                <th>Vezetéknév</th>
-                <th>Keresztnév</th>
-                <th>Személyi szám</th>
-                <th>Születési Idő</th>
-                <th>Telefonszám</th>
-                <th>Email</th>
-                <th>Jelszó</th>
-            
-                <td> {{ obj.azonosito }} meg random adat sry</td>
-                <td>{{ obj.vezeteknev }} meg random adat sry</td>
-                <td>{{ obj.keresztnevev }} meg random adat sry</td>
-                <td>{{ obj.szemelyiszam }} meg random adat sry</td>
-                <td>{{ obj.szulido }} meg random adat sry</td>
-                <td>{{ obj.telefonszam }} meg random adat sry</td>
-                <td>{{ obj.email }} meg random adat sry</td>
-                <td>{{ obj.jelszo }} meg random adat sry</td>
-            
-            -->
