--- a/vizsgazik/templates/vizsgazik_list.html
+++ b/vizsgazik/templates/vizsgazik_list.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'base_logged_in.html' %}
 
 {% block content %}
     <a href="../../vizsgazik/create"><h3>Új vizsgazik felvétele</h3></a>
