Tantárgyaim listázása kész

--- a/register/templates/base_logged_in.html
+++ b/register/templates/base_logged_in.html
@@ -32,7 +32,7 @@
                 Menü
               </button>
               <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuLink">
-                <a class="dropdown-item" href="{{ HTTP_HOST }}/kurzusok/">Kurzusok</a>
+                <a class="dropdown-item" href="{{ HTTP_HOST }}/me/kurzusok">Kurzusok</a>
                 <a class="dropdown-item" href="{{ HTTP_HOST }}/vizsgak/">Vizsgák</a>
                 <a class="dropdown-item" href="{{ HTTP_HOST }}/termek/">Termek</a>
               </div>
