--- a/user/templates/felhasznalok/felhasznalok_detail.html
+++ b/user/templates/felhasznalok/felhasznalok_detail.html
@@ -1,9 +1,8 @@
 {% extends 'base_logged_in.html' %}
 
 {% block content %}
-    <br><br><br>
-    <table style="margin-left: 30px; size: 600px; font-size: 42px">
-        <tr>
+    <table class="table">
+        <thead>
             <th>Azonosító</th>
             <th>Vezetéknév</th>
             <th>Keresztnév</th>
@@ -12,9 +11,9 @@
             <th>Telefonszám</th>
             <th>Email</th>
             <th>Jelszó</th>
-        </tr>
-
-        <tr>
+        </thead>
+        <tbody>
+            <tr>
             <td> {{ obj.azonosito }}</td>
                 <td>{{ obj.vezeteknev }}</td>
                 <td>{{ obj.keresztnevev }}</td>
@@ -24,8 +23,8 @@
                 <td>{{ obj.email }}</td>
                 <td>{{ obj.jelszo }}</td>
         </tr>
+        </tbody>
     </table>
-
-     <p style="font-size: 42px"> <a href="update/"> Szerkesztés</a>
-       <a href="delete/">Törlés</a> </p>
+    <button type="button" class="btn btn-primary btn-sm" id="kurzusfelvetele"><a href="/update">Szerkesztés</a></button>
+    <button type="button" class="btn btn-primary btn-sm" id="kurzusfelvetele"><a href="/delete">Törlés</a></button>
 {% endblock %}
