--- a/register/templates/register/registerAdmin.html
+++ b/register/templates/register/registerAdmin.html
@@ -1,6 +1,6 @@
 {% extends "base_register.html" %}
 
-<h1>REGISZTRÁLÁS!4!</h1>
+<h1>REGISZTRÁLÁS!!</h1>
 
 {% block content %}
     <div class="login-section card-footer">
