--- a/user/templates/felhasznalok/sajat_kurzusok.html
+++ b/user/templates/felhasznalok/sajat_kurzusok.html
@@ -1,50 +1,31 @@
 {% extends 'base_logged_in.html' %}
 
 {% block content %}
-    <table>
-        <tr>
-           <th>Kurzus Kódja</th>
-            <th>Kurzus Neve</th>
-            <th>Kredit</th>
-            <th>Terem Címe</th>
-            <th>Oktató Azonosítója</th>
-        </tr>
-    {% for instance in object_list %}
-            <tr>
-                <td><a href="{{ instance.get_absolute_url }}"> {{ instance.kurzuskod }}</a></td>
-                <td> {{ instance.kurzusnev }}  </td>
-                <td> {{ instance.kredit }}  </td>
-                <td> <a href="{{ instance.teremCim.get_absolute_url }}">{{ instance.teremCim.cim }} </a> </td>
-                <td> {{ instance.oktatoAzonosito.azonosito }}  </td>
-            </tr>
-        {% endfor %}
-    </table>
-
-
-    
     {% if role == "hallgato" %}
-    <H1>Felvett Kurzusaim</H1>
-
-    <table>
-        <tr>
-           <th>Kurzus Kódja</th>
-            <th>Kurzus Neve</th>
-            <th>Kredit</th>
-            <th>Terem Címe</th>
-            <th>Oktató Azonosítója</th>
-            <th>Teljesítette</th>
-        </tr>
-    {% for instance, teljesitette in felvettKurzusok %}
+    <H1>Felvett kurzusaim</H1>
+    <table class="table">
+        <thead>
+            <th>Kurzus kódja</th>
+            <th>Kurzus neve</th>
+            <th>Kreditszám</th>
+            <th>Terem száma</th>
+            <th>Oktató azonosítója</th>
+            <th>Teljesített</th>
+        </thead>
+        <tbody>
+            {% for instance, teljesitette in felvettKurzusok %}
             <tr>
                 <td><a href="{{ instance.get_absolute_url }}"> {{ instance.kurzuskod }}</a></td>
                 <td> {{ instance.kurzusnev }}  </td>
                 <td> {{ instance.kredit }}  </td>
                 <td> <a href="{{ instance.teremCim.get_absolute_url }}">{{ instance.teremCim.cim }} </a> </td>
                 <td> {{ instance.oktatoAzonosito.azonosito }}  </td>
-                <td> {{ teljesitette }}  </td>
+                <td> {{ teljesitette }} </td>
             </tr>
-        {% endfor %}
+            {% endfor %}
+        </tbody>
     </table>
+
     {% endif %}
 
 
